<resources>
    <string name="app_main_button">打开LOGIN页面</string>
    <string name="app_name">test2</string>
    <string name="app_login">登录</string>
    <string name="app_return">＜</string>
    <string name="app_user">账号：</string>
    <string name="app_password">密码：</string>
    <string name="app_register">快速注册</string>
    <string name="app_password_founded">找回密码</string>
    <string name="app_user_hint">用户名/邮箱/手机号</string>
    <string name="app_password_hint">请输入密码</string>
</resources>
