<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        >
        
        <Button
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/app_return"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_login"
            android:textSize="16sp"
            android:textColor="@color/app_login_title"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        
        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:textSize="15sp"
            android:textColor="@color/app_text"
            android:text="@string/app_user"
            android:layout_margin="12dp"
            />
        
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:layout_centerInParent="true"
            android:hint="@string/app_user_hint"
            android:layout_toEndOf="@+id/user"
            android:background="@null"
            />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/app_text"
            android:text="@string/app_password"
            android:layout_margin="12dp"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:layout_toEndOf="@+id/password"
            android:layout_centerInParent="true"
            android:hint="@string/app_password_hint"
            android:background="@null"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/app_login"
        android:textSize="16sp"
        android:textColor="@color/app_login_button"
        android:background="@drawable/bt_bg"
        android:layout_marginBottom="12dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_register"
            android:textSize="15sp"
            android:textColor="@color/app_text"
            android:layout_marginStart="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:text="@string/app_password_founded"
            android:textColor="@color/app_text"
            />

    </RelativeLayout>

</LinearLayout>